style.css
body {
    margin: 0;
    padding: 0;
    color: white;
}

.background {
    background-image: url("./bg.png");
    background-size: cover;
    filter: blur(5px);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 100vh;
}
a {
    color: white;
}
.header_background {
    position: fixed;
    background-color: rgba(48, 49, 58, 0.904);
    width: 100%;
    height: 100vh;
}

.desktop {
    margin: 0;
    padding: 0;
    list-style-type: none;
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}
.mobile {
    display: none;
}
a img {
    width: 32px;
    height: 32px;
}
li {
    margin: 0;
    padding: 0;
}
.right {
    float: right;
    margin-right: 50px;
}
.left {
    float: left;
    padding-top: 5px;
    padding-left: 5px;
}

a {
    text-decoration: none;
}
.right a {
    padding: 10px;
    color: white;
}

.right a:hover {
    color: #1affa3;
}
li a {
    display: block;
}
.menu {
    display: none;
    float: right;
}

i {
    cursor: pointer;
}
.intro {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
}
.image {
    width: 130px;
    height: 130px;
    overflow: hidden;
    margin: 130px auto 0;
    border: 2px solid #1affa3;
    border-radius: 50%;
}
.title {
    text-align: center;
    margin: 10px auto;
    width: auto;
}
.image img {
    width: 100%;
}

@media screen and (max-width: 430px) {
    .right {
        display: none;
    }
    .menu {
        display: inline-block;
        padding-top: 8px;
        padding-right: 8px;
    }
    .menu i {
        width: 32px;
        height: 32px;
        background: url(./menu.svg);
        background-size: 32px 32px;
        display: block;
    }
    .mobile {
        display: none;
        position: fixed;
        top: 0;
        right: 0;
        width: 40%;
        height: 100vh;
        background-color: rgba(34, 34, 41, 0.9);
        margin: 0;
        padding: 0;
        list-style-type: none;
        color: white;
    }
    .close i {
        width: 25px;
        height: 25px;
        background: url(./close.svg);
        background-size: 25px 25px;
        display: block;
        margin-bottom: 8px;
    }
    .close {
        padding-top: 12px;
        padding-left: 8px;
        width: 30px;
    }
    .mobile_nav {
        display: block;
        margin-top: 2px;
        background-color: rgb(54, 54, 65);
    }
    .mobile_nav a {
        display: block;
        padding: 8px;
    }
    .mobile_nav a:hover {
        color: #1affa3;
    }
}

